src/client/styles/app.styl
@import "vendor/reset.min.css"
@import "vendor/jquery-ui-1.10.4.custom.min.css"

lightGray = #292929

user-select()
  -moz-user-select arguments
  -khtml-user-select arguments
  -ms-user-select arguments
  -webkit-user-select arguments
  user-select arguments

selected-div()
  background #00498F url(images/ui-bg_dots-small_40_00498f_2x2.png) 50% 50% repeat
  color #fff

html
  background url(images/ui-bg_diagonals-thick_15_0b3e6f_40x40.png)
html.groovebasin
  background url(img/groovebasin.jpg)
html.nggyu
  background url(img/nggyu.jpg)

body
  font-family Arial, Helvetica, sans-serif

a:hover,a:active,a:focus
  outline 0

#track-slider
  margin 10px 10px 5px

  background url("img/bright-10.png") left no-repeat
  background-size 0% 100%

#nowplaying
  margin 6px auto
  text-align center

  .playback-btns
    float left

    li
      cursor pointer
      float left
      list-style none outside none
      margin 2px
      padding 4px

  h1
    letter-spacing 0.1em
    margin-top 8px
    font-weight bold

  .time
    margin 4px
    font-weight bold
    font-family monospace

  .left
    float right

  .elapsed
    float left

#client-vol, #vol
  margin 10px
  span
    float left
    margin -2px 2px 0px 10px

#client-vol-slider, #vol-slider
  float left
  height 10px

  .ui-slider-handle
    height 16px
    width 16px
    margin-top 2px

#client-vol-slider
  width 60px

#vol-slider
  width 300px

#vol-warning
  color #B63434

#vol-warning a
  color #57BF3B

#more-playback-btns
  float left
  font-size .6em
  margin 2px 0 0 8px

#left-window
  width 400px
  position absolute

#library-pane
  .window-header
    height 30px

#tabs
  user-select none

  ul
    margin-bottom -1px

    li
      display inline

      span
        font-size .625em
        padding 2px 4px
        font-weight normal

      cursor pointer

#library, #playlists
  overflow-y auto

  user-select none
  cursor default

  div.ui-icon
    float left

  p
    text-align center
    margin 20px auto 0
    padding 4px
    width 150px
    span
      float left
      margin-right .3em
    strong
      font-weight bold

  ul
    ul
      margin-left 9px
      ul
        margin-left 16px

    div.selected
      selected-div()

    div.cursor
      text-decoration underline

#lib-filter
  margin 4px
  width 175px

#user-id
  cursor pointer

#organize
  width 200px

#queue-window
  width 700px
  position absolute

  .window-header
    margin-bottom 4px
    font-size .6em

#queue-list
  .header
    font-weight bold
    overflow-x hidden
    overflow-y hidden
    height 1.2em

  span.track
    width 26px

  span.title
    width 30%

  span.artist
    width 30%

  span.album
    width 30%

  span.time
    width 36px

  span
    white-space nowrap
    height 1.2em
    overflow-x hidden
    overflow-y hidden
    float left
    margin-right 4px

#queue-items
  overflow-y auto
  overflow-x hidden
  clear both

  width 100%

  user-select none

  div
    clear both
    overflow-x hidden
    overflow-y hidden
    height 1.2em
    cursor default

  div:nth-child(2n+1)
    background-color #2A2A2A

  div.random
    color #96B7EB

  div.old
    color #555555

  div.selected
    selected-div()

  div.current
    border 1px solid #096AC8
    background-color lightGray
    font-weight bold
    color #75abff

  div.cursor
    span
      text-decoration underline

  div.border-bottom
    border-bottom 2px dashed #ffffff

  div.border-top
    border-top 2px dashed #ffffff

  span.track
    text-align right

  span.time
    text-align right

#upload
  overflow-y auto
  padding 4px
  h1
    font-size 1.4em
    margin 4px 0

#upload-widget
  padding 10px

#upload-by-url
  width 370px

.ui-menu
  width 240px
  font-size 1em

#menu-library .ui-state-disabled.ui-state-focus,
#menu-queue .ui-state-disabled.ui-state-focus
  margin: .3em -1px .2em

#shortcuts
  h1
    margin-bottom 10px
    margin-top 10px
    font-weight bold

  dl
    font-size .8em
    margin-bottom 4px

    dt
      font-family monospace
      display inline
      padding 3px
      background-color #272727
      font-weight bold
      text-shadow 1px 1px 0 #000000
      border-radius 4px

      em
        font-weight normal
        color #afafaf
        text-shadow none

    dd
      display inline

#main-err-msg
  margin 200px auto
  width 300px
  padding 4px
  span
    float left
    margin-right .3em
  strong
    font-weight bold

#settings
  padding 6px
  .section
    margin-bottom 14px
    h1
      font-weight bold
      font-size 1.4em
    h2
      font-size 1.1em
      font-weight bold
    button, label
      font-size .8em
    em
      font-style italic
    ul
      font-size .9em
      li:before
        content "\2713"

#auth-username, #auth-password
  width 300px

#settings-users-select
  width 350px

#settings-delete-user
  margin-right 20px

#settings-request
  background-color lightGray
  border-radius 4px
  padding 4px

#request-name
  width 290px

#request-replace
  width 294px

#events-online-users
  max-height 300px
  overflow-y auto

  .user
    width 180px
    overflow-x hidden
    float left
    .streaming
      float left
    .name
      float left

.accesskey
  text-decoration underline

.perm
  background-color lightGray
  color #96B7EB
  padding 2px
  border-radius 4px

#events-list
  overflow-y auto
  font-size 0.9em

  .name
    width 29%
    float left
    overflow-x hidden
    overflow-y hidden
    text-align right
    height 16px
  .msg
    float left
    width 69%
    margin-left 4px
  .event
    padding-top 2px
  .chat
    background-color lightGray

#chat-box-input
  width 100%

